Update ReadMe with v4 API auth instructions

--- a/app/views/users/dashboard.html.erb
+++ b/app/views/users/dashboard.html.erb
@@ -1,36 +1,40 @@
-<h1><%= "Welcome, #{@user.email}!" %></h1>
-<%= link_to "Discover Movies", discover_path, class: "btn btn-info btn-outline-dark" %>
-<br>
-<br>
-<%= form_with url: dashboard_path(@user.id), local: true do |form| %>
-  <%= form.label :find_friends, 'Find Friends by Email:' %>
-  <%= form.text_field :email, id: :email %>
-  <%= form.submit 'Search', class: "btn btn-info btn-sm btn-outline-dark" %>
-<% end %>
-<br>
-<% if !@user.friends? %>
-  <h3>You Have No Followers</h3>
-<% else %>
-  <h3>All Followers:</h3>
-  <% @user.followers.each do |follower| %>
-    <div id="follower-<%= follower.id %>">
-      <p><%= follower.email %></p>
-    </div>
+<% if !@user.email.nil? %>
+  <h1><%= "Welcome, #{@user.email}!" %></h1>
+  <%= link_to "Discover Movies", discover_path, class: "btn btn-info btn-outline-dark" %>
+  <br>
+  <br>
+  <%= form_with url: dashboard_path(@user.id), local: true do |form| %>
+    <%= form.label :find_friends, 'Find Friends by Email:' %>
+    <%= form.text_field :email, id: :email %>
+    <%= form.submit 'Search', class: "btn btn-info btn-sm btn-outline-dark" %>
   <% end %>
+  <br>
+  <% if !@user.friends? %>
+    <h3>You Have No Followers</h3>
+  <% else %>
+    <h3>All Followers:</h3>
+    <% @user.followers.each do |follower| %>
+      <div id="follower-<%= follower.id %>">
+        <p><%= follower.email %></p>
+      </div>
+    <% end %>
+  <% end %>
+  <br>
+  <h2 align="center">Viewing Parties</h2>
+  <table class="table table-sm table-borderless">
+    <thead>
+    </thead>
+    <tbody>
+      <tr align="center">
+        <td>
+          <%= render partial: 'parties', locals: { host: true} %>
+        </td>
+        <td>
+          <%= render partial: 'parties', locals: { host: false} %>
+        </td>
+      </tr>
+    </tbody>
+  </table>
+<% else %>
+  <h1>Dashboard</h1>
 <% end %>
-<br>
-<h2 align="center">Viewing Parties</h2>
-<table class="table table-sm table-borderless">
-  <thead>
-  </thead>
-  <tbody>
-    <tr align="center">
-      <td>
-        <%= render partial: 'parties', locals: { host: true} %>
-      </td>
-      <td>
-        <%= render partial: 'parties', locals: { host: false} %>
-      </td>
-    </tr>
-  </tbody>
-</table>
