--- a/app/views/movies/upcoming.html.erb
+++ b/app/views/movies/upcoming.html.erb
@@ -1,5 +1,9 @@
-<%= link_to "Discover Movies", discover_path, class: "btn btn-info btn-outline-dark" %>
-<br>
-<br>
-<h1>Upcoming Movies</h1>
-<%= render partial: 'results' %>
+<% if current_user %>
+  <%= link_to "Discover Movies", discover_path, class: "btn btn-info btn-outline-dark" %>
+  <br>
+  <br>
+  <h1>Upcoming Movies</h1>
+  <%= render partial: 'results' %>
+<% else %>
+  <h3>Please Log In to Search for Movies</h3>
+<% end %>
